--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    background: #0760B5;
+    background: #0b3880;
     flex-direction: column;
 }
 
@@ -34,12 +33,8 @@ h1 {
 }
 
 h1, label {
-  color: white;
-  text-shadow:
-     -1px -1px 0 #000,
-      1px -1px 0 #000,
-     -1px  1px 0 #000,
-      1px  1px 0 #000;
+    font-weight: bold;
+    color: white;
 }
 
 .match {
