--- a/style.css
+++ b/style.css
@@ -37,10 +37,8 @@ h1, label {
     color: white;
 }
 
-.match {
-    background-color: lightgreen;
-}
-
-.no-match {
-    background-color: lightsalmon;
+.campo span {
+    font-size: 20px;
+    font-weight: bold;
+    align-self: flex-end;
 }
